modernize java apis