@@ -4,11 +4,14 @@ import com.brandonitaly.bedrockskins.pack.AssetSource;
 import com.brandonitaly.bedrockskins.pack.LoadedSkin;
 import com.brandonitaly.bedrockskins.pack.SkinPackLoader;
 import net.minecraft.client.Minecraft;
+import net.minecraft.resources.Identifier;
 
 import java.io.File;
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
+import java.util.Comparator;
+import java.util.stream.Stream;
 
 public class ExternalAssetUtil {
 
@@ -24,16 +27,18 @@ public class ExternalAssetUtil {
      * Reads the raw byte array of a skin texture, supporting built-in, folder, and ZIP assets.
      */
     public static byte[] loadTextureData(AssetSource src, Minecraft minecraft) {
+        if (src == null) return new byte[0];
+
         try {
-            if (src instanceof AssetSource.Resource res) {
-                return minecraft.getResourceManager().getResource(res.id()).map(r -> {
+            return switch (src) {
+                case AssetSource.Resource(Identifier id) -> minecraft.getResourceManager().getResource(id).map(r -> {
                     try (InputStream in = r.open()) { 
                         return in.readAllBytes(); 
                     } catch (Exception e) { return new byte[0]; }
                 }).orElse(new byte[0]);
-            } else if (src instanceof AssetSource.File fSrc) {
-                return Files.readAllBytes(Paths.get(fSrc.path()));
-            }
+                case AssetSource.File(String path) -> Files.readAllBytes(Path.of(path));
+                case AssetSource.Remote ignored -> new byte[0];
+            };
         } catch (Exception ignored) {}
         return new byte[0];
     }
@@ -42,22 +47,20 @@ public class ExternalAssetUtil {
         boolean deleted = false;
 
         // Try deleting via loaded AssetSource
-        LoadedSkin firstSkin = null;
+        LoadedSkin firstSkin;
         synchronized (SkinPackLoader.loadedSkins) {
-            for (LoadedSkin skin : SkinPackLoader.loadedSkins.values()) {
-                if (packId.equals(skin.packId)) {
-                    firstSkin = skin;
-                    break;
-                }
-            }
+            firstSkin = SkinPackLoader.loadedSkins.values().stream()
+                    .filter(skin -> packId.equals(skin.packId))
+                    .findFirst()
+                    .orElse(null);
         }
 
         if (firstSkin != null) {
-            if (firstSkin.texture instanceof AssetSource.File fileSource) {
-                File textureFile = new File(fileSource.path());
-                File targetToDelete = textureFile.getName().endsWith(".png") ? textureFile.getParentFile() : null;
-                if (targetToDelete != null && targetToDelete.exists()) {
-                    deleteDirectoryRecursively(targetToDelete);
+            if (firstSkin.texture instanceof AssetSource.File(String path)) {
+                Path textureFile = Path.of(path);
+                Path targetToDelete = textureFile.getFileName().toString().endsWith(".png") ? textureFile.getParent() : null;
+                if (targetToDelete != null && Files.exists(targetToDelete)) {
+                    deleteDirectoryRecursively(targetToDelete.toFile());
                     deleted = true;
                 }
             }
@@ -68,14 +71,15 @@ public class ExternalAssetUtil {
 
     public static void deleteDirectoryRecursively(File directory) {
         if (directory == null || !directory.exists()) return;
-        if (directory.isDirectory()) {
-            File[] allContents = directory.listFiles();
-            if (allContents != null) {
-                for (File file : allContents) {
-                    deleteDirectoryRecursively(file);
-                }
-            }
+        Path root = directory.toPath();
+        try (Stream<Path> paths = Files.walk(root)) {
+            paths.sorted(Comparator.reverseOrder()).forEach(path -> {
+                try {
+                    Files.deleteIfExists(path);
+                } catch (Exception ignored) {}
+            });
+        } catch (Exception ignored) {
+            directory.delete();
         }
-        directory.delete();
     }
 }
